--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -21,3 +21,11 @@ ja:
   time:
     formats:
       default: "%Y/%m/%d %H:%M"
+      
+  views:
+    pagination:
+      first: "&laquo;最初"
+      last: "最後&raquo;"
+      previous: "&lsaquo;前"
+      next: "次&rsaquo;"
+      truncate: "..."
